--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "jsend": "^1.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.3",
     "object-to-xml": "^2.0.0",
     "on-covid-19": "^0.1.3",
-    "sucrase": "^3.13.0",
-    "xml": "^1.0.1"
+    "sucrase": "^3.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
