--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start-mon": "nodemon app.js"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
