--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "babel  src --out-dir dist --copy-files",
     "clean": "rm -rf dist && mkdir dist",
     "start": "node dist/app.js",
-    "heroku-postbuild": "npm run clean && npm run build --prod",
+    "heroku-postbuild": "yarn run clean && npm run build --prod",
     "lint": "eslint ./src/",
     "start-mon": "nodemon src/app.js"
   },
