--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
 frontend.url =  https://htolajide.github.io/covid-19-estimator-frontend/
-backend.rest = https://jsonplaceholder.typicode.com/todos
+backend.rest = https://estimate-covid19.herokuapp.com/
